# AgentOSClaude

./: .antigravity.md  .env.example  .gitignore  .graphifyignore  .mcp.json  AGENTS.md  CLAUDE.md  DAAVA_Novel_Complete.md  DESIGN.md  GEMINI.md  README.md  README_LTX.md  bookmarklet.js  cdlc_nim_optimizer.py  create_test_db.py  direct_tts.py  discover_nvidia_gen.py  download_models.py  dp700_master_stack.py  dp700_storyboard.html  firecrawl_test.md  generate_plates.py  generate_spire_audio.py  generate_spire_plates.py  get_nim_models.py  index.html  ingest_screenplays.ps1  karpathy_mandates.md  main.py  nim_context_packages.md  nim_limit_tester.py  nim_models.json  nim_usage_log.json  nvidia_nim_prototype.py  okf-implementation-plan.md  package.json  production_generator.py  puli_meka.py  pyrefly.toml  render.bat  (+25 more)
.claude/: launch.json  settings.local.json
.firecrawl/: cdlc_slides_extracted.md  dp700_guide.md  search-llama-nim-local.json  search-ngc-cli.json  search-nim-cli-pip.json  search-nim-no-docker.json  search-nim-pip.json  search-nim-python.json  search-nim-rtx-installer.json  search-nim-rtx.json  search-nim-wsl2-cli.json  (+1 more)
mvct-v1/: README.md  auditor.py  config.py  convo.py  knowledge.py  ledger.py  loop.py  monitor.py  permission.py  policy.py  pyproject.toml  runner.py  sensor.py  socratic.py
mvct-v1/scripts/: demo_transfer.json
mvct-v1/tests/: test_auditor.py  test_convo.py  test_knowledge.py  test_ledger.py  test_monitor.py  test_permission.py  test_policy.py  test_runner.py  test_sensor.py  test_socratic.py
mvct-v1/topics/: houseplant.json
(+877 files in other folders)
